--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-reanimated": "^1.7.0",
+    "react-native-responsive-image": "^2.3.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.4",
+    "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
